# shikigami

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix  install.sh  justfile  result
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.sqlx/: query-06a8d1569a151fc7ebc10200be8c2c86c5352c20edbbd328a77d698d1b788e07.json  query-0b2b7da665cbd8a14181a6a692bf6a85a9247200890584aa928cff545f1a3c3f.json  query-1f0b8afb569e5c8196a2d27f709c19f4b94a0c58ea6104af2d76b378b0d39866.json  query-2d5baaf3615f09cfdfc0e3dc5e8387a0f3c323504815f704a59dc675b82ec2b2.json  query-329fe105062bf9076ea694108ec52d2e3220f3d4fc9d6381d9a013b1429fdddd.json  query-384d576f7f47907a887ed1ff7b88211b3b4f9cbefa699a61d91bd86d613718b5.json  query-3a84dc593d3c6a57a39cd0bfe59b3a2f8e32cfca25017984898e07078f466cea.json  query-3d0a0ec36ca188bd7df93a5386a91ae455344246fc86612388231d47a0c7b9dd.json  query-748d051604d02f85490fbf56b8127122962fcf03422b4190474b4dcfcd5ebe50.json  query-74cc82f2b6a9d2d028275dbdb7a61650690930db2fa98b821ac5110ebe66034c.json  query-8bd18c5e589001f1fc6bf259da4c06af29caafc3e74723f1364a3b516f31142a.json  query-8f6d1147764e566afc0e1c55c043059f51ee76a12f474f0f9e5ee1c32c859e97.json  query-96ee1c43061a4d449b72a58b90897938d923d756819366ff5a6c1757352b9628.json  query-a92ce281d7ad79524605527e7d0b55882dcdedd7d1bf6355c74847ab31e7a9b7.json  query-ad580357cf9967749dfd7f95f71724c02f5665a12053e128d2ac45751be544cd.json  query-ad5fd0906d7a1ab33f5d6d8605eafc2221594d9d7af4c2f05c01079066ab60e4.json  (+14 more)
migrations/: 20260523214114_initial_db.down.sql  (+7 more)
src/: config.rs  (+3 more)
(+41 files in other folders)
